Restyle density graph, step artist to use new font

--- a/Languages/en.ini
+++ b/Languages/en.ini
@@ -124,7 +124,7 @@ Entering Options...=Entering Options...
 Options=Options
 
 # StepArtist
-STEPS=STEPS
+STEPS=Steps:
 
 # SortMenu labels
 SortBy=Sort By
