--- a/Languages/fr.ini
+++ b/Languages/fr.ini
@@ -103,7 +103,7 @@ Entering Options...=Chargement des options...
 Options=Options
 
 # StepArtist
-STEPS=PAS
+STEPS=Pas:
 
 # SortMenu
 Group=Groupe
