--- a/Languages/it.ini
+++ b/Languages/it.ini
@@ -131,7 +131,7 @@ Entering Options...=Caricamento Opzioni...
 Options=Opzioni
 
 # StepArtist
-STEPS=CHART
+STEPS=Chart:
 
 # SortMenu labels
 SortBy=Ordina Per
