--- a/Languages/pl.ini
+++ b/Languages/pl.ini
@@ -125,7 +125,7 @@ Entering Options...=Otwieranie opcji...
 Options=Opcje
 
 # StepArtist
-STEPS=KROKI
+STEPS=Kroki:
 
 # SortMenu labels
 SortBy=Sortowanie
